# customer_support_chatbot

./: Install_and_Usage.md  README copy.md  README.md  app.py  pyproject.toml  requirements.txt
evaluation_data/: evaluation_data.json
knowledge_base/: billing_and_payment_data.json  delivery_and_shipping_data.json  facility_and_admin_data.json  hr_data.json  it_support_data.json
notebooks/: chatbot_experiment.ipynb
run_tools/: evaluate_agent.py  ingest_data.py  main.py
src/assistant/: __init__.py  config.py  utils.py
src/assistant/application/: generate_response.py  reset_state.py
src/assistant/application/agents/: edges.py  graph.py  nodes.py  state.py
src/assistant/application/evaluation/: evaluate.py  upload_evaluation_data.py
src/assistant/application/memory/: long_term_memory.py
src/assistant/application/rag/: embeddings.py  retriever.py
src/assistant/domain/: __init__.py  document.py  prompts.py
src/assistant/infrastructure/: api.py  opik_utils.py
src/assistant/infrastructure/mongdb/: client.py
src/assistant/infrastructure/qdrant/: service.py
